app/globals.css
/* ... */
@layer utilities {
  .heading1 {
    @apply font-bold text-[26px] leading-[38px];
  }

  .heading1-semibold {
    @apply font-semibold text-[26px] leading-[38px];
  }

  .heading2 {
    @apply font-bold text-[18px] leading-[28px];
  }

  .heading3 {
    @apply font-semibold text-[18px] leading-[26px];
  }

  .heading3-regular {
    @apply font-normal text-[18px] leading-[26px];
  }

  .display {
    @apply font-bold text-[16px] leading-[24px];
  }

  .display-semibold {
    @apply font-semibold text-[16px] leading-[24px];
  }

  .display-regular {
    @apply font-normal text-[16px] leading-[24px];
  }

  .body {
    @apply font-bold text-[14px] leading-[22px];
  }

  .body-semibold {
    @apply font-semibold text-[14px] leading-[22px];
  }

  .body-regular {
    @apply font-normal text-[14px] leading-[22px];
  }

  .bodyMd {
    @apply font-bold text-[12px] leading-[18px];
  }

  .bodyMd-semibold {
    @apply font-semibold text-[12px] leading-[18px];
  }

  .bodyMd-regular {
    @apply font-normal text-[12px] leading-[18px];
  }

  .bodySm-semibold {
    @apply font-semibold text-[10px] leading-[16px];
  }

  .bodySm-regular {
    @apply font-normal text-[10px] leading-[16px];
  }

  .bodyXs-semibold {
    @apply font-semibold text-[9px] leading-[14px];
  }

  .bodyXs-regular {
    @apply font-normal text-[9px] leading-[14px];
  }

  /* Flex */

  .flexCenter {
    @apply flex items-center justify-center;
  }

  .max-container {
    @apply max-w-[1440px] mx-auto px-[2.5%];
  }

  .customCheckbox {
    @apply relative float-left  h-[1.125rem] w-[1.125rem] appearance-none rounded-[0.25rem] border-[0.125rem] border-solid border-neutral-300 outline-none before:pointer-events-none before:absolute before:h-[0.875rem] before:w-[0.875rem] before:scale-0 before:rounded-full before:bg-transparent before:opacity-0 before:shadow-[0px_0px_0px_13px_transparent] before:content-[''] checked:border-primary checked:bg-primary checked:before:opacity-[0.16] checked:after:absolute checked:after:-mt-px checked:after:ml-[0.25rem] checked:after:block checked:after:h-[0.8125rem] checked:after:w-[0.375rem] checked:after:rotate-45 checked:after:border-[0.125rem] checked:after:border-l-0 checked:after:border-t-0 checked:after:border-solid checked:after:border-white checked:after:bg-transparent checked:after:content-[''] hover:cursor-pointer hover:before:opacity-[0.04] hover:before:shadow-[0px_0px_0px_13px_rgba(0,0,0,0.6)] focus:shadow-none focus:transition-[border-color_0.2s] focus:before:scale-100 focus:before:opacity-[0.12] focus:before:shadow-[0px_0px_0px_13px_rgba(0,0,0,0.6)] focus:before:transition-[box-shadow_0.2s,transform_0.2s] focus:after:absolute focus:after:z-[1] focus:after:block focus:after:h-[0.875rem] focus:after:w-[0.875rem] focus:after:rounded-[0.125rem] focus:after:content-[''] checked:focus:before:scale-100 checked:focus:before:shadow-[0px_0px_0px_13px_#3b71ca] checked:focus:before:transition-[box-shadow_0.2s,transform_0.2s] checked:focus:after:-mt-px checked:focus:after:ml-[0.25rem] checked:focus:after:h-[0.8125rem] checked:focus:after:w-[0.375rem] checked:focus:after:rotate-45 checked:focus:after:rounded-none checked:focus:after:border-[0.125rem] checked:focus:after:border-l-0 checked:focus:after:border-t-0 checked:focus:after:border-solid checked:focus:after:border-white checked:focus:after:bg-transparent dark:border-neutral-600 dark:checked:border-primary dark:checked:bg-primary dark:focus:before:shadow-[0px_0px_0px_13px_rgba(255,255,255,0.4)] dark:checked:focus:before:shadow-[0px_0px_0px_13px_#3b71ca];
  }

  /* No Focus */

  .no-focus {
    @apply focus-visible:ring-0 focus-visible:ring-transparent focus-visible:ring-offset-0 !important;
  }

  /* Screen width minus 5% */

  .w-screen-minus-8 {
    width: calc(100vw - theme('spacing.8'));
  }

  /* Scrollbar */

  ::-webkit-scrollbar {
    width: 5px;
  }

  ::-webkit-scrollbar-track {
    background: transparent;
  }

  ::-webkit-scrollbar-thumb {
    background: #f4f6f8;
    border-radius: 5px;
  }

  ::-webkit-scrollbar-thumb:hover {
    background: #f4f6f8;
  }

  /* Clerk */

  .cl-socialButtons {
    display: flex;
    width: auto;
    display: flex;
    width: auto;
  }

  .cl-socialButtons .cl-socialButtonsBlockButton {
    width: 60px;
    height: 50px;
    display: flex;
    width: 60px;
    height: 50px;
    display: flex;
  }

  html.dark .cl-socialButtons .cl-socialButtonsBlockButton {
    background-color: var(--dark);
    border: 1px solid var(--gray);
    background-color: var(--dark);
    border: 1px solid var(--gray);
  }

  html.dark .cl-socialButtonsBlockButton__github .cl-internal-1fc9kwt > img {
    filter: invert(100%);
    filter: invert(100%);
  }

  html.dark .cl-internal-b868gt {
    background-color: var(--white);
    background-color: var(--white);
  }

  .cl-socialButtonsBlockButton__github .cl-socialButtonsBlockButtonText,
  .cl-socialButtonsBlockButton__google
    .cl-socialButtonsBlockButtonText__google {
    display: none !important;
    display: none !important;
  }

  .cl-socialButtons .cl-internal-1fc9kwt {
    display: flex;
    justify-content: center;
    align-items: center;
    display: flex;
    justify-content: center;
    align-items: center;
  }

  .cl-internal-b3fm6y,
  .cl-formButtonPrimary {
    background-color: var(--orange);
    background-color: var(--orange);
  }

  .cl-footerActionLink {
    color: var(--orange);
    color: var(--orange);
  }

  html.dark .cl-internal-17ydaof {
    background-color: var(--dark);
    background-color: var(--dark);
  }

  html.dark .cl-internal-1vbdq0x,
  html.dark .cl-internal-13zhnx0,
  html.dark .cl-internal-1xpzc82,
  html.dark .cl-internal-17bz5n6,
  html.dark .cl-internal-138ov2f {
    color: var(--white);
    color: var(--white);
  }

  html.dark .cl-internal-mdg29y,
  html.dark .cl-internal-18ut2g5 {
    background-color: var(--dark);
    color: var(--white);
    background-color: var(--dark);
    color: var(--white);
  }
}
/* ... */

